--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <link rel="stylesheet" href="css/styles.css">
     <title>My Website Style Guide</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;0,700;1,300&family=Nunito:ital,wght@0,400;0,700;1,300&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -17,22 +19,27 @@
     <h2>My colours</h2>
     <section class="colours">
             <div class="color1">
+                <p>Steel teal</p>
                 <p>#143C4A</p>
                 <p>RGB (20,60,40)</p>
             </div>
             <div class="color2">
+                <p>Soft green</p>
                 <p>#A1BF84</p>
                 <p>RGB (161,191,132)</p>  
             </div>
             <div class="color3">
+                <p>Mega pink</p>
                 <p>#B5709E</p>
                 <p>RGB (181,112,158)</p>  
             </div>
             <div class="color4">
+                <p>City blue</p>
                 <p>#9ECAC4</p>
                 <p>RGB (158,202,196)</p>  
             </div>
             <div class="color5">
+                <p>Steel Thunder</p>
                 <p>#417367</p>
                 <p>RGB (65,115,103)</p>  
             </div>
@@ -43,9 +50,28 @@
                     <a href="https://htmlcolors.com/palette/1494/stukident" target="_blank"><htmlcolors class="com">htmlcolors.com</a>.</p>
             </div>
     </section>
-    <section class="fonts">
-        <h2>My fonts</h2>
+    <section>
+    <h2>My fonts</h2>
+    <div class="fonts">
+        <div class = "FiraSans">
+            <p class = "regular">This is Fira Sans and this rocks</p>
+            <p class = "italic">This is Fira Sans and this rocks</p>
+            <p class = "bold">This is Fira Sans and this rocks</p>
+        </div>
+        <div class = "Nunito">
+            <p class = "regular">This is Nunito and this rocks</p>
+            <p class = "italic">This is Nunito and this rocks</p>
+            <p class = "bold">This is Nunito and this rocks</p>
+        </div>
+        <div class = "SourceSansPro">
+            <p class = "regular">This is Source Sans Pro and this rocks</p>
+            <p class = "italic">This is Source Sans Pro  and this rocks</p>
+            <p class = "bold">This is Source Sans Pro and this rocks</p>
+        </div>
+    </div>
+    <p>The above are selection of fonts from Google I will use in future projects.</p>
     </section>
+
     <section class = "text-styles">
         <h2>My text styles</h2>
     </section>
