further changes - going to pause work for now

--- a/index.html
+++ b/index.html
@@ -54,16 +54,19 @@
     <h2>My fonts</h2>
     <div class="fonts">
         <div class = "FiraSans">
+            <h3>Fira Sans</h3>
             <p class = "regular">This is Fira Sans and this rocks</p>
             <p class = "italic">This is Fira Sans and this rocks</p>
             <p class = "bold">This is Fira Sans and this rocks</p>
         </div>
         <div class = "Nunito">
+            <h3>Nunito</h3>
             <p class = "regular">This is Nunito and this rocks</p>
             <p class = "italic">This is Nunito and this rocks</p>
             <p class = "bold">This is Nunito and this rocks</p>
         </div>
         <div class = "SourceSansPro">
+            <h3>Source Sans Pro</h3>
             <p class = "regular">This is Source Sans Pro and this rocks</p>
             <p class = "italic">This is Source Sans Pro  and this rocks</p>
             <p class = "bold">This is Source Sans Pro and this rocks</p>
@@ -74,11 +77,27 @@
 
     <section class = "text-styles">
         <h2>My text styles</h2>
+        <div class = "stylesbox">
+            <h3 class = "h1heading">H1: Main page heading</h3>
+                <ul>
+                    <li>Font-weight: 700px (bolder)</li>
+                    <li>Font-size: large</li>
+                    <li>Font-family: Fira Sans</li>
+                </ul>
+            <h3 class = "h2heading">H2: Subheading</h3>
+                <ul>
+                    <li>Font-weight: 700px (bolder)</li>
+                    <li>Font-size: 24px</li>
+                    <li>Font-family: Nunito</li>
+                </ul>
+            <h3 class = "pheading">p: Paragraph text</h3>
+                <ul>
+                    <li>Font-weight: 400px (normal)</li>
+                    <li>Font-size: medium</li>
+                    <li>Font-family: Source Sans Pro</li>
+                </ul>
+        </div>
     </section>
 </main>
-
-
-
-
 </body>
 </html>
